# practica-sistemas-percepcion-mayr

./: .gitignore  README.md
include/: ImageColorSegmentation.hpp  ImageShapeSegmentation.hpp  PointXY.hpp  PointXYHSL.hpp  PointXYLAB.hpp  Shape.hpp  header_test.hpp
resources/: Video 1.wmv  Video 3.wmv
src/example/: CMakeLists.txt  main.cpp
